k8s/messaging/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rabbitmq
  namespace: backend
spec:
  hosts:
  - "lab.com.br"  # Permite qualquer host (192.168.49.240)
  gateways:
  - istio-system/ingress-gateway  # Referência ao Gateway criado acima
  http:
  - match:
    - uri:
        prefix: /backend/rabbitmq/
    rewrite:
      uri: "/"  # Remove o prefixo antes de encaminhar para o serviço interno
    route:
    - destination:
        host: rabbitmq.backend.svc.cluster.local  # Nome completo do serviço no namespace frontend
        port:
          number: 15672
